Modified imgbase to display correct version
Change-Id: I52b2e34a8ac0d04290bd15b1829b39cf78a54b6b
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1333742
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>
(cherry picked from commit cf405bf626a6614e976b8b241f5d50e88280a62a)

--- a/src/imgbased/config.py.in
+++ b/src/imgbased/config.py.in
@@ -23,9 +23,7 @@
 
 PACKAGE_NAME = '@PACKAGE_NAME@'
 PACKAGE_VERSION = '@PACKAGE_VERSION@'
-REVISION = '@REVISION@'
-RELEASE = '@RELEASE@'
 
 
 def version():
-    return "%s-%s-%s%s" % (PACKAGE_NAME, PACKAGE_VERSION, RELEASE, REVISION)
+    return "%s-%s" % (PACKAGE_NAME, PACKAGE_VERSION)
