fix 'make distcheck'
VPATH is read-only with automake.

python-coverage expects to be able to write test results.

Building RPMs expects it to be writable.

Use our own distcheck with an independent tmpdir which is cleaned
up after the target runs.

Change-Id: Idc4959c4f1a6ca4587fa479d6fe923ee342110ee
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1417100
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,17 @@
-
+AUTOMAKE_OPTIONS=-Wno-override
 CLEANFILES=
 
 SHELL := /bin/bash
+
+TMPDIR = tmp
+TMPREPOS = tmp.repos
 
 hooksdir = $(pkgdatadir)/hooks.d/
 pyimagebaseddir = $(pythondir)/$(PACKAGE_NAME)
 pyimagebasedpluginsdir = $(pyimagebaseddir)/plugins
 
-.PHONY: check check-code check-build
-.SILENT: check check-pyflakes check-pep8 check-nosetests check-build
+.PHONY: check check-code check-build distcheck
+.SILENT: check check-pyflakes check-pep8 check-nosetests check-build distcheck
 
 vpath $(srcdir)
 
@@ -27,6 +30,7 @@ dist_hooks_SCRIPTS = \
   data/hooks/rebase
 
 EXTRA_DIST = \
+  autogen.sh \
   README.md \
   LICENSE \
   packaging/rpm/imgbased.spec \
@@ -58,7 +62,7 @@ docs/imgbase.8: docs/imgbase.8.asc
 
 rpm:DEF_RELEASE=--define "_release @RELEASE@@REVISION@"
 rpm: dist
-	rpmbuild $(DEF_RELEASE) -ta $(DIST_ARCHIVES)
+	rpmbuild $(RPMBUILD_ARGS) $(DEF_RELEASE) -ta $(DIST_ARCHIVES)
 
 rpm-build-deps:
 	grep "Require" packaging/rpm/imgbased.spec | cut -d: -f2-
@@ -102,3 +106,14 @@ check-code: check-pyflakes check-pep8 check-nosetests
 
 check: check-code check-build
 	@echo "PASS"
+
+distcheck: export RPMBUILD_ARGS=--define="_topdir `pwd`/$(TMPDIR)/$(TMPREPOS)"
+distcheck:
+	$(MAKE) dist
+	rm -rf $(TMPDIR) && \
+	mkdir $(TMPDIR) && \
+	cd $(TMPDIR) && \
+	tar xf ../imgbased-@PACKAGE_VERSION@.tar.xz -C . --strip 1 && \
+	./autogen.sh && \
+	$(MAKE) check
+	rm -rf $(TMPDIR)
