--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -1,6 +1,3 @@
-# FIXME Follow https://fedoraproject.org/wiki/Packaging:Python
-%define is_el7 %(test 0%{?centos} -eq 07 || test 0%{?rhel} -eq 07 && echo 1 || echo 0)
-
 Name:           imgbased
 Version:        @PACKAGE_RPM_VERSION@
 Release:        %{?_release}%{?!_release:0.1}%{?dist}
@@ -12,6 +9,12 @@ Source0:        http://resources.ovirt.org/pub/src/%{name}/%{name}-%{version}.ta
 
 BuildArch:      noarch
 
+%if 0%{?fedora} || 0%{?rhel} >= 8
+%global with_python3 1
+%else
+%global with_python2 1
+%endif
+
 # Skips check since rhel default repos lack pep8, pyflakes and python-nose
 %if ! 0%{?rhel}
 %{!?with_check:%global with_check 1}
@@ -20,39 +23,60 @@ BuildArch:      noarch
 %endif
 
 BuildRequires:       make
-BuildRequires:       automake autoconf
+BuildRequires:       automake
+BuildRequires:       autoconf
 BuildRequires:       rpm-build
 BuildRequires:       git
 BuildRequires:       asciidoc
 BuildRequires:       systemd-units
-
-BuildRequires:       python-devel python-six
-
-%if 0%{?with_check}
-BuildRequires:       python-pep8 pyflakes python-nose
-%endif
-
 BuildRequires:       rpm-python
 
-%if 0%{?is_el7}
-BuildRequires:       python-six
+%if 0%{?with_python2}
+Requires:            python-imgbased
 %else
-Recommends:          systemd-python3
-BuildRequires:       python3-six
-BuildRequires:       python3-devel
+Requires:            python3-imgbased
 %endif
 
-Requires:       lvm2
-Requires:       util-linux
-Requires:       augeas
-Requires:       rsync
+Requires:            lvm2
+Requires:            util-linux
+Requires:            augeas
+Requires:            rsync
 
+%{!?_licensedir:%global license %%doc}
 
 %description
 This tool enforces a special usage pattern for LVM.
 Basically this is about having read-only bases and writable
 layers atop.
 
+%if 0%{?with_python2}
+%package -n python-imgbased
+Summary: A python 2 module for imgbased
+%if 0%{?with_python2} && 0%{?with_check}
+BuildRequires:       python-pep8
+BuildRequires:       pyflakes
+BuildRequires:       python-nose
+BuildRequires:       python-devel
+BuildRequires:       python-six
+%endif
+
+%description -n python-imgbased
+python3-imgbased is a python 3 library to manage lvm layers
+%endif
+
+%if 0%{?with_python3}
+%package -n python3-imgbased
+Summary: A python 3 module for imgbased
+BuildRequires:       python3-devel
+BuildRequires:       python3-pep8
+BuildRequires:       python3-pyflakes
+BuildRequires:       python3-nose
+BuildRequires:       python3-six
+Recommends:          systemd-python3
+
+%description -n python3-imgbased
+python3-imgbased is a python 3 library to manage lvm layers
+%endif
 
 %prep
 %setup -q
@@ -61,7 +85,6 @@ layers atop.
 %build
 %configure
 make %{?_smp_mflags}
-
 
 %install
 %if 0%{?fedora}
@@ -78,7 +101,7 @@ install -Dm 0644 src/plugin-yum/imgbased-persist.conf \
 install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
 install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/imgbase-copy-bootfiles.service
 install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
-%make_install
+%make_install DESTDIR="%{buildroot}"
 
 
 %files
@@ -87,7 +110,6 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 %{_sbindir}/imgbase
 %{_sbindir}/imgbase-copy-bootfiles
 %{_datadir}/%{name}/hooks.d/
-%{python_sitelib}/%{name}/
 %{_mandir}/man8/imgbase.8*
 %{_mandir}/man8/imgbase-copy-bootfiles.8*
 /%{_docdir}/%{name}/*.asc
@@ -101,7 +123,24 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 %{_prefix}/lib/yum-plugins/imgbased-persist.py*
 %endif
 
+%if 0%{?with_python2}
+%files -n python-imgbased
+%doc README.md
+%license LICENSE
+%{python_sitelib}/%{name}/
+%endif
+
+%if 0%{?with_python3}
+%files -n python3-imgbased
+%doc README.md
+%license LICENSE
+%{python3_sitelib}/%{name}/
+%endif
+
 %changelog
+* Thu Feb 02 2017 Douglas Schilling Landgraf <dougsland@redhat.com> - 0.9.7-0
+- split the imgbase in two packages for python3 support
+
 * Fri Jan 20 2017 Ryan Barry <rbarry@redhat.com> - 0.9.6-1
 - Copy kernel FIPS signatures into /boot
 
