--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -104,6 +104,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Feb 20 2017 Ryan Barry <rbarry@redhat.com> - 0.9.11-0
+- Fix some logic problems in imgbased's handling of bases
+
 * Mon Feb 20 2017 Douglas Schilling Landgraf <dougsland@redhat.com> - 0.9.10-0
 - Keep unmodified configuration files
 - Switch to a NIST partition layout on upgrades
