--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -104,6 +104,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Wed Feb 22 2017 Ryan Barry <rbarry@redhat.com> - 0.9.12-0
+- Fix an error with imgbase --init
+
 * Mon Feb 20 2017 Ryan Barry <rbarry@redhat.com> - 0.9.11-0
 - Fix some logic problems in imgbased's handling of bases
 
