--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -104,8 +104,8 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
-* Wed Feb 22 2017 Ryan Barry <rbarry@redhat.com> - 0.9.13-0
-- Ignore lvmmetad errors on --init
+* Thu Feb 23 2017 Ryan Barry <rbarry@redhat.com> - 0.9.14-0
+- Rescan all LVs on update
 
 * Wed Feb 22 2017 Ryan Barry <rbarry@redhat.com> - 0.9.12-0
 - Fix an error with imgbase --init
