Added systemd unit for running vdsm-tool configure
Change-Id: I05218527068023ad7364c0b54eee85d53020aaa9
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1429594
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -77,6 +77,7 @@ install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase
 install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.service
 install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/imgbase-copy-bootfiles.service
 install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
+install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbase-config-vdsm.service
 %make_install
 
 
