--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,7 @@ EXTRA_DIST = \
   data/imgbase-motd.service \
   data/imgbase-copy-bootfiles.service \
   data/imgbase-generate-iqn.service \
+  data/imgbase-config-vdsm.service \
   docs/imgbase-copy-bootfiles.8 \
   tests/*.py
   $(NULL)
