--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -101,6 +101,10 @@ install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbas
 %endif
 
 %changelog
+* Mon Mar 06 2017 Sandro Bonazzola <sbonazzo@redhat.com> - 0.8.16-0
+- Added systemd unit for running vdsm-tool configure
+- Resolves: BZ#1429594
+
 * Thu Mar 02 2017 Ryan Barry <rbarry@redhat.com> - 0.8.15-1
 - Ensure that we always copy essential files from /etc
 
