--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -141,6 +141,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Mar 06 2017 Sandro Bonazzola <sbonazzo@redhat.com> - 0.9.999-0
+- Development for 4.2
+
 * Mon Mar 06 2017 Sandro Bonazzola <sbonazzo@redhat.com> - 0.9.16-0
 - Added systemd unit for running vdsm-tool configure
 - Resolves: BZ#1429288
