--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -105,6 +105,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Mar 14 2017 Ryan Barry <rbarry@redhat.com> - 0.9.18-0
+- Don't copy critical files when remediating /etc
+
 * Mon Mar 06 2017 Sandro Bonazzola <sbonazzo@redhat.com> - 0.9.16-0
 - Added systemd unit for running vdsm-tool configure
 - Resolves: BZ#1429288
