--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -105,6 +105,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Fri Mar 30 2017 Ryan Barry <rbarry@redhat.com> - 0.9.20-0
+- Make user/group addition work nicely during --init
+
 * Thu Mar 30 2017 Ryan Barry <rbarry@redhat.com> - 0.9.19-0
 - Migrate /var on updates
 - Relabel /etc and /var on updates
