--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -102,6 +102,7 @@ install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase
 install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/imgbase-copy-bootfiles.service
 install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
 install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbase-config-vdsm.service
+install -Dm 0444 data/imgbased-pool.profile %{buildroot}%{_sysconfdir}/lvm/profile/imgbased-pool.profile
 install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %make_install DESTDIR="%{buildroot}"
 
@@ -117,6 +118,7 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 /%{_docdir}/%{name}/*.asc
 %{_unitdir}/imgbase-*.service
 %{_sysconfdir}/grub.d/09_node
+%{_sysconfdir}/lvm/profile/imgbased-pool.profile
 %if 0%{?fedora}
 %{_sysconfdir}/dnf/pluginconf.d/imgbased-persist.conf
 %{python3_sitelib}/dnf-plugins/imgbased-persist.py*
