Fixed CI issues
- Added yum as a dependency (using rpmUtils from yum)
- Changed print to log.debug

Change-Id: I25c9c1adc1f7956b5596072863cfce413ba5b2b1
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -42,10 +42,11 @@ BuildRequires:       python3-six
 BuildRequires:       python3-devel
 %endif
 
-Requires:       lvm2
-Requires:       util-linux
-Requires:       augeas
-Requires:       rsync
+Requires:            lvm2
+Requires:            util-linux
+Requires:            augeas
+Requires:            rsync
+Requires:            yum
 
 
 %description
