imgbase-config-vdsm: start after chronyd/ntpd
To ensure the vdsm cert has the correct date, start
imgbase-config-vdsm after we think the clock may be synced

Sleep for a little bit to be extra sure

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1454536
Change-Id: I3f98296befc661805118f02d519b654a02661dd5
Signed-off-by: Ryan Barry <rbarry@redhat.com>
(cherry picked from commit e624342a1fc0d873ed3f8d498a34d365c8fb9d6d)

--- a/data/imgbase-config-vdsm.service
+++ b/data/imgbase-config-vdsm.service
@@ -1,8 +1,10 @@
 [Unit]
 Description=Reconfigure vdsm
 Before=supervdsmd.service
+After=chronyd.service ntpd.service
 
 [Service]
+ExecStartPre=/usr/bin/sleep 2
 ExecStart=/usr/bin/vdsm-tool -v configure --force
 Type=oneshot
 RemainAfterExit=yes
