--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,12 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Thu May 25 2017 Ryan Barry <rbarry@redhat.com> - 0.9.28-0
+- Delay imgbased-config-vdsm until after chronyd/ntpd
+- Thread operations in osupdater to speed it up
+- Re-add NIST migration and selinux commands
+- Use tar instead of rsync for the initial filesystem sync
+
 * Mon May 22 2017 Ryan Barry <rbarry@redhat.com> - 0.9.27-0
 - Defer migrating to NIST again until the timeout is increased
 
