--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Thu Jun 22 2017 Ryan Barry <rbarry@redhat.com> - 0.9.32-0
+- Work around lvm.conf changes in 7.4 when bind mounting /etc during updates
+
 * Thu Jun 01 2017 Ryan Barry <rbarry@redhat.com> - 0.9.31-0
 - Fix the arrangement of arguments to threaded_boot_runner
 
