Added /var/crash to the volumes list
Change-Id: Ie1eb6936d74573c7d693ecd07a7fab1765994814
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1433394
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/src/imgbased/config.py.in
+++ b/src/imgbased/config.py.in
@@ -30,6 +30,8 @@ def version():
 
 paths = {"/var":           {"size":   "15G",
                             "attach": True},
+         "/var/crash":     {"size":   "10G",
+                            "attach": True},
          "/var/log":       {"size":   "8G",
                             "attach": True},
          "/var/log/audit": {"size":   "2G",
