Add 'discard' to NIST mounts also
Anaconda uses fstab for these, and they will not get the 'discard'
flag set by imgbased.Volume, so we should check there ourselves,
then check the systemd units if they exist.

Also have 'imgbased check' validate the NIST volumes.

Change-Id: Ifbbf880db42c69dda76472d9732e8899324283a9
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1472189
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/src/imgbased/config.py.in
+++ b/src/imgbased/config.py.in
@@ -27,3 +27,15 @@ PACKAGE_VERSION = '@PACKAGE_VERSION@'
 
 def version():
     return "%s-%s" % (PACKAGE_NAME, PACKAGE_VERSION)
+
+paths = {"/var":           {"size":   "15G",
+                            "attach": True},
+         "/var/log":       {"size":   "8G",
+                            "attach": True},
+         "/var/log/audit": {"size":   "2G",
+                            "attach": True},
+         "/home":          {"size":   "1G",
+                            "attach": True},
+         "/tmp":           {"size":   "2G",
+                            "attach": False},
+         }
