--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Fri Jul 28 2017 Ryan Barry <rbarry@redhat.com> - 0.9.36-0
+- Use lazy umounting so udev doesn't catch /etc during upgrades
+
 * Thu Jul 27 2017 Ryan Barry <rbarry@redhat.com> - 0.9.35-0
 - Ensure discard is also set for /
 - Move initrd generation back to the main thread in osupdater
