--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Aug 01 2017 Ryan Barry <rbarry@redhat.com> - 0.9.37-0
+- Generate a clean uuid for systemd-nspawn
+
 * Fri Jul 28 2017 Ryan Barry <rbarry@redhat.com> - 0.9.36-0
 - Use lazy umounting so udev doesn't catch /etc during upgrades
 
