--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,10 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Fri Aug 04 2017 Ryan Barry <rbarry@redhat.com> - 0.9.39-0
+- Add --xattrs-enable=* to untarring so suid bits get set
+- Use the root redirection in setfiles instead of a chroot
+
 * Wed Aug 02 2017 Ryan Barry <rbarry@redhat.com> - 0.9.38-0
 - Run systemd-nspawn in a permissive domain
 
