--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,11 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Aug 08 2017 Ryan Barry <rbarry@redhat.com> - 0.9.41-0
+- Remove the firstboot service
+- Don't copy selinux policy files between layers
+- Run RPM scripts with the correct pre/postinstall context
+
 * Mon Aug 07 2017 Ryan Barry <rbarry@redhat.com> - 0.9.40-0
 - Move selinux handling to a systemd service which runs after boot
 
