--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,11 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Wed Aug 09 2017 Ryan Barry <rbarry@redhat.com> - 0.9.42-0
+- Set the NIST /tmp partition to 1GB
+- Restore permissions on /usr/share for the rpmdb
+- Make /etc remediation also sync systemd levels
+
 * Tue Aug 08 2017 Ryan Barry <rbarry@redhat.com> - 0.9.41-0
 - Remove the firstboot service
 - Don't copy selinux policy files between layers
