--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Wed Aug 16 2017 Ryan Barry <rbarry@redhat.com> - 0.9.45-0
+- idmap should mark as drifted if new uids/gids are added
+
 * Wed Aug 16 2017 Ryan Barry <rbarry@redhat.com> - 0.9.44-0
 - Use chroot again for setfiles
 
