Try to block `kill` from imgbase-copy-bootfiles
On shutdown, imgbased copies kernel+initrd from /boot to /boot/ovirt.
If for some reason (slow disk, modified default timeout to low values)
systemd kills the unit and its subprocesses, the copy doesn't end
well, leaving corrupted kernel or initrd files under /boot/ovirt and
making the system unbootable.

Change-Id: I2ea6b825449bf4c58b082303ae575d2c46029ec6
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1493176
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>
(cherry picked from commit 4111c4feee239a12bde9d3c6c7a17013e4eb409b)

--- a/data/imgbase-copy-bootfiles.service
+++ b/data/imgbase-copy-bootfiles.service
@@ -7,6 +7,8 @@ ExecStart=/usr/sbin/imgbase-copy-bootfiles startup
 ExecStop=/usr/sbin/imgbase-copy-bootfiles shutdown
 Type=oneshot
 RemainAfterExit=yes
+TimeoutStopSec=infinity
+KillMode=none
 
 [Install]
 WantedBy=multi-user.target
