--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Sep 26 2017 Ryan Barry <rbarry@redhat.com> - 0.9.48-0
+- Try to block `kill` from imgbase-copy-bootfiles
+
 * Wed Aug 16 2017 Ryan Barry <rbarry@redhat.com> - 0.9.47-0
 - Reconcile setfiles from git
 
