--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -150,6 +150,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Jan 15 2018 Ryan Barry <rbarry@redhat.com> - 1.0.6-0
+- Cleanup boot files when layers are removed
+
 * Wed Dec 13 2017 Ryan Barry <rbarry@redhat.com> - 1.0.5-0
 - Make the NTP migration smarter
 
