--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Jan 15 2018 Ryan Barry <rbarry@redhat.com> - 0.9.52-0
+- Cleanup boot files when layers are removed
+
 * Thu Nov 16 2017 Ryan Barry <rbarry@redhat.com> - 0.9.51-0
 - Don't remediate ifcfg files
 
