--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -150,6 +150,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Fri Jan 26 2018 Sandro Bonazzola <sbonazzo@redhat.com> - 1.0.8-0
+- osupdater: fixed TypeError on MountPoint (rhbz#1538925)
+
 * Wed Jan 24 2018 Ryan Barry <rbarry@redhat.com> - 1.0.7-0
 - Don't migrate deleted configuration files
 
