Allow for new kernel installation
kernel %postinstall scripts call new-kernel-pkg, which directly
uses grubby, so grub2-mkconfig is never called. Additionally,
new-kernel-pkg forces a title which does not use PRETTY_NAME
(see rhbz#1539673), which causs problems.

Update imgbase/bootloader.py a bit in order to detect these
changes and avoid breaking nodectl if a new kernel has been
installed.

Secondly, create a systemd service which only runs at shutdown,
before imgbase-copy-bootfiles, which restores the files removed by
new-kernel-pkg, then puts the new kernel files into Node's boot
directory.

Change-Id: Ia49499c4bcc21eff6aa3ca2e917558cd8944098f
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1515698
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,8 @@ vpath $(srcdir)
 
 dist_sbin_SCRIPTS = \
   scripts/imgbase \
-  scripts/imgbase-copy-bootfiles
+  scripts/imgbase-copy-bootfiles \
+  scripts/imgbase-fix-new-kernel
 
 dist_pyimagebased_PYTHON = \
   src/imgbased/*.py
@@ -40,10 +41,12 @@ EXTRA_DIST = \
   src/plugin-yum/imgbased-persist.conf \
   data/imgbase-clean-grub.service \
   data/imgbase-copy-bootfiles.service \
+  data/imgbase-fix-new-kernel.service \
   data/imgbase-generate-iqn.service \
   data/imgbase-config-vdsm.service \
   data/imgbased-pool.profile \
   docs/imgbase-copy-bootfiles.8 \
+  docs/imgbase-fix-new-kernel.8 \
   scripts/grub/09_node \
   tests/*.py
   $(NULL)
@@ -54,7 +57,8 @@ dist_doc_DATA = \
 
 man8_MANS = \
   docs/imgbase.8 \
-  docs/imgbase-copy-bootfiles.8
+  docs/imgbase-copy-bootfiles.8 \
+  docs/imgbase-fix-new-kernel.8
 
 doc: $(doc_DATA) $(dist_doc_DATA) $(man8-MANS)
 
