--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -105,6 +105,7 @@ install -Dm 0644 src/plugin-yum/imgbased-persist.conf \
 %endif
 install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
 install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/imgbase-copy-bootfiles.service
+install -Dm 0644 data/imgbase-fix-new-kernel.service %{buildroot}%{_unitdir}/imgbase-fix-new-kernel.service
 install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
 install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbase-config-vdsm.service
 install -Dm 0444 data/imgbased-pool.profile %{buildroot}%{_sysconfdir}/lvm/profile/imgbased-pool.profile
@@ -117,9 +118,11 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %license LICENSE
 %{_sbindir}/imgbase
 %{_sbindir}/imgbase-copy-bootfiles
+%{_sbindir}/imgbase-fix-new-kernel
 %{_datadir}/%{name}/hooks.d/
 %{_mandir}/man8/imgbase.8*
 %{_mandir}/man8/imgbase-copy-bootfiles.8*
+%{_mandir}/man8/imgbase-fix-new-kernel.8*
 /%{_docdir}/%{name}/*.asc
 %{_unitdir}/imgbase-*.service
 %{_sysconfdir}/grub.d/09_node
