--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -153,6 +153,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Thu Mar 22 2018 Ryan Barry <rbarry@redhat.com> - 1.0.10-0
+- Relabel /dev for lldpad
+
 * Tue Feb 20 2018 Ryan Barry <rbarry@redhat.com> - 1.0.9-0
 - Work around new-kernel-pkg on new kernel installations
 
