--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -106,6 +106,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Thu Mar 22 2018 Ryan Barry <rbarry@redhat.com> - 0.9.55-0
+- Also relabel /dev on updates
+
 * Fri Jan 26 2018 Sandro Bonazzola <sbonazzo@redhat.com> - 0.9.54-0
 - osupdater: fixed TypeError on MountPoint (rhbz#1538925)
 
